Lagt till klasser Gjort om projektet till FX fixat POM.XML Fixat Hib.cfg.xml Lagt in gitignore

--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.grp5.Main</mainClass> <!-- Här anger du huvudklassen -->
+                    <mainClass>com.grp5.Main</mainClass>
                 </configuration>
                 <executions>
                     <execution>
